--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "testbot",
+  "name": "discordtestbot",
   "version": "1.0.0",
-  "description": "A testing bot",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rene",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.2",
     "discord.js": "^11.4.2",
-    "jimp": "^0.6.1"
+    "jimp": "^0.6.1",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.2.2",
+    "os": "^0.1.1",
+    "parse-ms": "^2.0.0",
+    "quick.db": "^7.0.0-b22",
+    "request": "^2.88.0"
   }
 }
