--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jimp": "^0.6.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.2.2",
+    "mongoose": "^5.5.1",
     "os": "^0.1.1",
     "parse-ms": "^2.0.0",
     "quick.db": "^7.0.0-b22",
