--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   "author": "Rene",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2",
     "discord.js": "^11.4.2",
     "jimp": "^0.6.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.2.2",
+    "mongodb": "^3.2.3",
     "mongoose": "^5.5.1",
     "os": "^0.1.1",
     "parse-ms": "^2.0.0",
     "quick.db": "^7.0.0-b22",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "snekfetch": "^4.0.4",
+    "superagent": "^5.0.2"
   }
 }
