--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment-duration-format": "^2.2.2",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.1",
+    "mysql": "^2.17.1",
     "os": "^0.1.1",
     "parse-ms": "^2.0.0",
     "quick.db": "^7.0.0-b22",
